--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,14 @@
 .App > div {
   margin-right: 50px;
 }
+.is-done {
+  opacity: 0.5;
+}
+.active {
+  background-color: cadetblue;
+}
+.error {
+  background-color: lightpink ;
+  border: 2px solid red;
+  outline: transparent;
+}
