--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,27 @@
 .App {
-  padding: 30px;
-  display: flex;
+  /*padding: 30px;*/
+  /*display: flex;*/
 }
 
-.App > div {
-  margin-right: 50px;
+
+/*.App > div {*/
+/*  margin-right: 50px;*/
+/*}*/
+
+
+/*.App > div {*/
+/*  margin-top: 15px;*/
+/*}*/
+
+/*.container {*/
+/*  min-width: 1280px;*/
+/*}*/
+
+.paper_todoList {
+  margin-top: 25px;
+  padding: 10px;
 }
+
 .is-done {
   opacity: 0.5;
 }
