--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,26 @@
+/*
 .App {
-  /*padding: 30px;*/
-  /*display: flex;*/
+  padding: 30px;
+  display: flex;
 }
 
+.App > div {
+  margin-right: 50px;
+}
 
-/*.App > div {*/
-/*  margin-right: 50px;*/
-/*}*/
+.error {
+  border: red 1px solid;
+}
 
+.error-message {
+  color: red;
+}
 
-/*.App > div {*/
-/*  margin-top: 15px;*/
-/*}*/
-
-/*.container {*/
-/*  min-width: 1280px;*/
-/*}*/
-
-.paper_todoList {
-  margin-top: 25px;
-  padding: 10px;
+.active-filter {
+  background-color: aquamarine;
 }
 
 .is-done {
   opacity: 0.5;
 }
-.active {
-  background-color: cadetblue;
-}
-.error {
-  background-color: lightpink ;
-  border: 2px solid red;
-  outline: transparent;
-}
+*/
